# Haskel-Calculator

./: Calculator.cabal  Main.hs  README.md  calc-project.cabal  main.hs
