name:              calc-project
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple


    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          
                 , yesod                         
                 , yesod-core                    
                 , yesod-auth                    
                 , yesod-static                  
                 , yesod-form                    
                 , classy-prelude                
                 , classy-prelude-conduit        
                 , classy-prelude-yesod          
                 , bytestring                    
                 , text                          
                 , persistent                    
                 , persistent-sqlite             
                 , persistent-template           
                 , template-haskell
                 , shakespeare                   
                 , hjsmin                        
                 , monad-control                 
                 , wai-extra                     
                 , yaml                          
                 , http-conduit                  
                 , directory                     
                 , warp                          
                 , data-default
                 , aeson                         
                 , conduit                       
                 , monad-logger                  
                 , fast-logger                   
                 , wai-logger                    
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai

executable         calc-project
 hs-source-dirs: .
    
     main-is:           main.hs


    ghc-options:       -threaded -rtsopts -with-rtsopts=-N


extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , calc-project
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
